# ACM_CGP

./: README.md  abalone.csv  adult.csv  analcatdata.csv  bach.csv  bach_choral_harmony.csv  bike_sharing_day.csv  bike_sharing_hour.csv  cal_housing.csv  car_evaluation.csv  chronic_kidney_disease.csv  diabetes.csv  energydata.csv  forestfires.csv  koza.csv  nguyen.csv  pagie-1.csv  pagie.csv  pollution.csv  test.csv  winequality_red.csv  winequality_white.csv
code/: Cargo.toml
code/src/: global_params.rs  lib.rs  main.rs
code/src/cgp_es/: chromosome.rs  mod.rs  node.rs
code/src/dag/: chromosome_dag.rs  mod.rs  node_dag.rs
code/src/datasets/: abalone.rs  adult.rs  analcatdata.rs  bach.rs  bike_sharing_day.rs  bike_sharing_hour.rs  cal_housing.rs  car.rs  chronic_kidney_disease.rs  diabetes.rs  energydata.rs  forest.rs  forestfires.rs  human.rs  iris.rs  koza.rs  mod.rs  nguyen.rs  pagie.rs  pollution.rs  wall24.rs  wine_quality.rs  winequality_red.rs  winequality_white.rs
code/src/datasets/Data/: readme.txt
code/src/datasets/Data/Klassifikation/: bach.arff  chronic_kidney_disease_full.arff  forest.arff  iris.arff  wall24.arff  wine_quality.arff
code/src/datasets/Data/Regression/: 542_pollution.tsv  556_analcatdata_apnea2.tsv  (+2 more)
code/src/reorder/: chromosome_reorder.rs  chromosome_reorder_equidistant.rs  linspace.rs  mod.rs  node_reorder.rs
code/src/utils/: boolean_functions.rs  cycle_checker.rs  fitness_metrics.rs  mod.rs  node_type.rs  runner.rs  runner_multiple_parents.rs  vect_difference.rs
code/src/vanilla_cgp/: chromosome.rs  mod.rs  node.rs
(+10 files in other folders)
