[package]
name = "cgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
#opt-level = 3
#lto = "fat"


[profile.release]
opt-level = 3
#debug = true
lto = "fat"


[dependencies]
rand = "0.8.5"
ndarray = "0.15.6"
float_eq = "1.0.1"
rustc-hash = "1.1.0"
petgraph = "0.6.3"
nohash-hasher = "0.2.0"
clap = { version = "4.2.5", features = ["derive"] }
itertools-num = "0.1.3"
csv = "1.3.0"
plotly = "0.9.0"

[features]
vanilla = []
ant = []
mulambda= []